# fintech-wallet-engine

./: .env.example  README.md  pyproject.toml
app/: config.py  database.py
